# real-estate-price-estimator

./: .dockerignore  .gitignore  Dockerfile  README.md  REVIEW.md  app.py  pyproject.toml  render.yaml  requirements.txt  vercel.json  verify.sh
data/: sample_housing.csv
docs/: index.html
scripts/: generate_sample_data.py
src/real_estate_price_estimator/: __init__.py  cli.py  market_data.py  pipeline.py  web_app.py  wsgi.py
tests/: test_market_data.py  test_pipeline.py  test_web_app.py  test_wsgi.py
