[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-price-estimator"
version = "0.1.0"
description = "Regression pipeline for estimating real estate sale prices."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "joblib>=1.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "app:app"
